# youtube-clone

./: .dockerignore  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  entrypoint.sh  gunicorn.conf.py
backend/accounts/: urls.py
backend/config/: middleware.py  settings.py  urls.py  views.py
backend/static/css/: variables.css
backend/templates/: base.html
backend/videos/: admin.py  forms.py  helpers.py  models.py  quarantine.py  tasks.py  tests.py  tests_validation.py  urls.py  validators.py  views.py
backend/videos/management/commands/: cleanup_quarantine.py
backend/videos/migrations/: 0001_initial.py  0002_videolike.py  0003_videoview.py  0004_video_codec_video_container_video_duration_and_more.py  0005_secure_upload_processing.py  0006_grandfather_existing_videos.py
backend/videos/templates/videos/: detail.html  processing.html  upload.html
nginx/: nginx.conf
