[project]
name = "youtube-clone"
version = "0.2.0"
description = "youtube-clone — A video sharing platform engineered for scale"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
    "django-ratelimit>=4.1.0",
    "imagekitio>=5.5.2",
    "python-dotenv>=1.2.2",
    "python-magic>=0.4.27",
    "psycopg[binary]>=3.1",
    "dj-database-url>=2.0",
    "django-redis>=5.4",
    "celery>=5.4",
    "clamd>=1.0",
    "gunicorn>=22.0",
    "whitenoise>=6.8,<7",
]
